# R-Type

./: .clang-format  .clang-tidy  .gitignore  Animation_8hpp__dep__incl.dot  CMakeLists.txt  CollisionSystem_8cpp__incl.dot  CollisionSystem_8hpp__dep__incl.dot  CollisionSystem_8hpp__incl.dot  CollisionSystem_8hpp_source.html  Collision_8hpp__dep__incl.dot  Component_8hpp__dep__incl.dot  DestroySystem_8cpp__incl.dot  DestroySystem_8hpp__dep__incl.dot  DestroySystem_8hpp__incl.dot  DestroySystem_8hpp_source.html  Destroy_8hpp__dep__incl.dot  EcsManager_8cpp.html  EcsManager_8cpp__incl.dot  EcsManager_8hpp.html  EcsManager_8hpp__dep__incl.dot  EcsManager_8hpp__incl.dot  EcsManager_8hpp_source.html  Enemy_8hpp__dep__incl.dot  Entity_8cpp.html  Entity_8hpp__dep__incl.dot  Entity_8hpp_source.html  Game.cpp  Game_8cpp.html  Game_8cpp__incl.dot  Game_8hpp.html  Game_8hpp__incl.dot  Game_8hpp_source.html  HealthSystem_8cpp__incl.dot  HealthSystem_8hpp__dep__incl.dot  HealthSystem_8hpp__incl.dot  HealthSystem_8hpp_source.html  Health_8cpp.html  Health_8cpp__incl.dot  Health_8hpp__dep__incl.dot  Health_8hpp_source.html  (+128 more)
.github/workflows/: ci.yml
GameEngine/: EcsManager.cpp  EcsManager.hpp  Entity.hpp  main.cpp
GameEngine/Components/: Enemy.hpp  Sprite.cpp  Sprite.hpp
GameEngine/Systems/: InputSystem.cpp  InputSystem.hpp
Levels/: example-level-incorrect.cfg  example-level.cfg
api/: index_classes.md  index_examples.md  index_files.md  index_groups.md  index_namespaces.md  index_pages.md
api/Classes/: classecs_1_1Animation.md  classecs_1_1Background.md  classecs_1_1BackgroundSystem.md  classecs_1_1Collision.md  classecs_1_1CollisionSystem.md  classecs_1_1Component.md  classecs_1_1Destroy.md  classecs_1_1DestroySystem.md  classecs_1_1DummyComponent.md  classecs_1_1DummySystem.md  classecs_1_1EcsManager.md  classecs_1_1Enemy.md  classecs_1_1Entity.md  classecs_1_1Health.md  classecs_1_1HealthSystem.md  classecs_1_1InputPlayer.md  classecs_1_1InputSystem.md  classecs_1_1MovementSystem.md  classecs_1_1PlayerAnimation.md  classecs_1_1PlayerAnimationSystem.md  classecs_1_1Position.md  classecs_1_1RenderSystem.md  classecs_1_1ResourceManager.md  classecs_1_1Shoot.md  classecs_1_1ShootSystem.md  classecs_1_1Sound.md  classecs_1_1Sprite.md  classecs_1_1SpriteAnimationSystem.md  classecs_1_1System.md  classecs_1_1Velocity.md  classecs_1_1VelocitySystem.md  classserver_1_1Game.md  classserver_1_1Level.md  classserver_1_1LevelManager.md  classserver_1_1Parser.md  classserver_1_1Server.md
api/Files/: Animation_8cpp.md  Animation_8hpp.md  BackgroundSystem_8cpp.md  BackgroundSystem_8hpp.md  Background_8cpp.md  Background_8hpp.md  CollisionSystem_8cpp.md  CollisionSystem_8hpp.md  (+82 more)
client/: CMakeLists.txt
config/: client.cfg
docs/: SUMMARY.md
ecs/: EcsManager.cpp  EcsManager.hpp
search/: all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_d.js  all_e.js  all_f.js  classes_a.js  files_a.js  functions_1.js  functions_10.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  searchdata.js  variables_0.js
server/: CMakeLists.txt
server/src/: CMakeLists.txt  main.cpp
server/src/game/: Game.cpp  Game.hpp
server/src/level/: Level.cpp  Level.hpp
server/src/level_manager/: LevelManager.cpp  LevelManager.hpp
server/src/lobby_manager/: Lobby.hpp  LobbyManager.cpp  LobbyManager.hpp
server/src/parser/: LevelParser.cpp  LevelParser.hpp  Parser.cpp
server/src/server/: Game.cpp  Game.hpp  Server.cpp  Server.hpp
server/src/server_shared_data/: ServerSharedData.cpp  ServerSharedData.hpp
server/src/shoot_manager/: ShootManager.cpp  ShootManager.hpp
(+76 files in other folders)
